fix/correções para inicialização do sistema

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -3,7 +3,7 @@ NODE_ENV=test
 PORT=3001
 
 # Database (usar um banco específico para testes)
-DATABASE_URL="postgresql://saas_barber:senha123@localhost:5432/saas_barber_test?schema=public"
+DATABASE_URL="postgresql://postgres:postgres123@localhost:5432/saas_barber_test?schema=public"
 
 # JWT
 JWT_SECRET="teste-jwt-secret-key-super-segura-para-testes-123456"
