fix/erros de e2e

--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
+    "test:e2e:dashboard": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js run dashboard",
+    "test:e2e:appointments": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js run appointments",
+    "test:e2e:api": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js run api-integration",
+    "test:e2e:roles": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js run user-roles",
+    "test:e2e:flow": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js run e2e-flow",
+    "test:e2e:all": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js all",
     "test:coverage": "npm run test:coverage --workspaces",
     "lint": "npm run lint --workspaces",
     "lint:fix": "npm run lint:fix --workspaces",
