fix: Corrigir todos os testes automatizados (backend + frontend)
 Backend: 82/82 testes passando
- Corrigida limpeza de banco com ordem de foreign keys
- Implementado isolamento total entre testes
- Removidas dependências de dados globais
- Corrigido tsconfig.json

 Frontend: 16/16 testes passando
- Corrigido hook useSchedule com métodos corretos da API
- Atualizados mocks para refletir estrutura real
- Substituído require por import ES6
- Removidos arquivos duplicados

 Padrões estabelecidos:
- Dados únicos por teste usando timestamps
- Setup e cleanup isolados por teste
- Transações para limpeza atômica do banco
- Mocks consistentes da API

 Documentação atualizada no memory bank
 Todos os testes executam de forma confiável e isolada

--- a/backend/package.json
+++ b/backend/package.json
@@ -74,8 +74,7 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  },
-  "jest": {
+  },  "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
@@ -102,6 +101,8 @@
       "lcov",
       "html"
     ],
-    "testTimeout": 10000
+    "testTimeout": 15000,
+    "maxWorkers": 1,
+    "forceExit": true
   }
 }
