--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -39,15 +39,13 @@
     /* Decorators */
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    
-    /* Source maps */
+      /* Source maps */
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true
   },
   "include": [
-    "src/**/*",
-    "tests/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
