--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,10 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
+    "test:coverage": "jest --coverage",    "lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit",
+    "type-check:ci": "tsc --noEmit -p tsconfig.ci.json",
     "db:generate": "prisma generate",
     "db:migrate": "dotenv -e .env.test -- prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
