--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "test:e2e:roles": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js run user-roles",
     "test:e2e:flow": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js run e2e-flow",
     "test:e2e:all": "cd e2e && npx tsc test-runner.ts --outDir . --target es2020 --module commonjs && node test-runner.js all",
-    "test:coverage": "npm run test:coverage --workspaces",
-    "lint": "npm run lint --workspaces",
+    "test:coverage": "npm run test:coverage --workspaces",    "lint": "npm run lint --workspaces",
     "lint:fix": "npm run lint:fix --workspaces",
+    "type-check": "npm run type-check --workspaces",
+    "type-check:ci": "npm run type-check:ci --workspaces",
     "db:migrate": "npm run db:migrate --workspace=backend",
     "db:seed": "npm run db:seed --workspace=backend",
     "db:studio": "npm run db:studio --workspace=backend",
