--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",    "lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit",
     "type-check:ci": "tsc --noEmit -p tsconfig.ci.json",
@@ -20,7 +21,9 @@
     "db:seed": "tsx src/prisma/seed.ts",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset --force",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "lint:production": "eslint src --ext .ts --config .eslintrc.production.js",
+    "lint:strict": "eslint src --ext .ts --max-warnings 0"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
@@ -74,7 +77,8 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  },  "jest": {
+  },
+  "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
