--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -2,9 +2,9 @@ name: 🚀 CI/CD Pipeline Completo
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, testes]
   pull_request:
-    branches: [main, develop]
+    branches: [main, develop, testes]
 
 env:
   NODE_VERSION: '18'
@@ -41,20 +41,16 @@ jobs:
         run: cd frontend && npm ci
       
       - name: 🔍 Backend Lint
-        run: cd backend && npm run lint || exit 0
-        continue-on-error: true
-      
+        run: cd backend && npm run lint
+
       - name: 🔍 Frontend Lint
-        run: cd frontend && npm run lint || exit 0
-        continue-on-error: true
-      
+        run: cd frontend && npm run lint
+
       - name: 🔍 Backend Type Check
-        run: cd backend && npm run type-check || exit 0
-        continue-on-error: true
-      
+        run: cd backend && npm run type-check
+
       - name: 🔍 Frontend Type Check
-        run: cd frontend && npm run type-check || exit 0
-        continue-on-error: true
+        run: cd frontend && npm run type-check
 
   # ========================================
   # TESTES BACKEND
@@ -114,8 +110,7 @@ jobs:
           DATABASE_URL: ${{ env.DATABASE_URL }}
         
       - name: 🧪 Run backend tests
-        run: cd backend && npm run test || exit 0
-        continue-on-error: true
+        run: cd backend && npm run test
         env:
           DATABASE_URL: ${{ env.DATABASE_URL }}
           REDIS_URL: ${{ env.REDIS_URL }}
@@ -150,8 +145,7 @@ jobs:
         run: cd frontend && npm ci
         
       - name: 🧪 Run frontend tests
-        run: cd frontend && npm run test || exit 0
-        continue-on-error: true
+        run: cd frontend && npm run test
         
       - name: 🏗️ Build frontend
         run: cd frontend && npm run build
@@ -237,7 +231,7 @@ jobs:
           VITE_API_URL: http://localhost:3001
         
       - name: 🎭 Run E2E tests
-        run: npx playwright test || exit 0
+        run: npx playwright test
         continue-on-error: true
         
       - name: 📊 Upload E2E results
@@ -284,6 +278,47 @@ jobs:
             backend/dist/
             frontend/dist/
           retention-days: 30
+
+  # ========================================
+  # DEPLOY STAGING (branch testes/develop)
+  # ========================================
+  staging-deploy:
+    name: 🚀 Deploy Staging
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
+    if: github.ref == 'refs/heads/testes' || github.ref == 'refs/heads/develop'
+
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 📦 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: 🏗️ Build for staging
+        run: |
+          npm ci
+          cd backend && npm ci && npm run build
+          cd ../frontend && npm ci && npm run build
+
+      - name: 📦 Archive staging artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: staging-build
+          path: |
+            backend/dist/
+            frontend/dist/
+          retention-days: 7
+
+      - name: 📋 Staging deployment info
+        run: |
+          echo "🚀 Staging deployment preparado!"
+          echo "Branch: ${{ github.ref_name }}"
+          echo "Commit: ${{ github.sha }}"
+          echo "Artifacts disponíveis para deploy manual"
 
   # ========================================
   # SUMMARY
