--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "dotenv -e .env -- tsx watch src/index.ts",
+    "dev:test": "cross-env NODE_ENV=test dotenv -e .env.test -- tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
