fix: Corrigir script postinstall para não falhar quando Playwright não está disponível
- Adicionar fallback no script postinstall para evitar falha no CI
- Usar npx playwright install com fallback para echo quando não disponível
- Resolver problema de instalação de dependências no backend durante CI

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "docker:logs": "docker-compose logs -f",
     "setup": "npm install && npm run docker:up && npm run db:migrate && npm run db:seed",
     "clean": "npm run clean --workspaces && rm -rf node_modules playwright-report",
-    "postinstall": "playwright install"
+    "postinstall": "npx playwright install || echo 'Playwright not available, skipping install'"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
