--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -41,10 +41,10 @@ jobs:
         run: cd frontend && npm ci
       
       - name: 🔍 Backend Lint
-        run: cd backend && npm run lint
+        run: cd backend && npm run lint:ci
 
       - name: 🔍 Frontend Lint
-        run: cd frontend && npm run lint
+        run: cd frontend && npm run lint:ci
 
       - name: 🔍 Backend Type Check
         run: cd backend && npm run type-check
