--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext .ts --report-unused-disable-directives",
+    "lint:ci": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 50",
     "lint:fix": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit",
     "type-check:ci": "tsc --noEmit -p tsconfig.ci.json",
