--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint src --ext .ts --report-unused-disable-directives",
     "lint:ci": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 150",
     "lint:fix": "eslint src --ext .ts --fix",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit -p tsconfig.test.json",
     "type-check:ci": "tsc --noEmit -p tsconfig.ci.json",
     "db:generate": "prisma generate",
     "db:migrate": "dotenv -e .env.test -- prisma migrate dev",
