--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -50,7 +50,8 @@
   "exclude": [
     "node_modules",
     "dist",
-    "coverage"
+    "coverage",
+    "src/tests/**/*"
   ],
   "ts-node": {
     "esm": false,
