--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,8 @@
     "noEmit": false,
     "outDir": "./dist",
     "rootDir": "./src",
+    "typeRoots": ["./node_modules/@types", "../node_modules/@types"],
+    "types": ["node"],
     
     /* Linting */
     "noUnusedLocals": true,
