--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -105,6 +105,7 @@ jobs:
       - name: 🗃️ Setup database
         run: |
           cd backend
+          npx prisma generate
           npx prisma migrate deploy
         env:
           DATABASE_URL: ${{ env.DATABASE_URL }}
