fix: Resolver problemas de tipos TypeScript no build
- Criar arquivo express.d.ts para estender namespace Express
- Adicionar propriedade user opcional ao Request do Express
- Atualizar tsconfig.json para incluir tipos do Express
- Resolver erros TS2769 nos handlers de rotas autenticadas
- Garantir compatibilidade entre AuthenticatedRequest e Express Request

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,8 +14,8 @@
     "noEmit": false,
     "outDir": "./dist",
     "rootDir": "./src",
-    "typeRoots": ["./node_modules/@types", "../node_modules/@types"],
-    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "../node_modules/@types", "./src/types"],
+    "types": ["node", "express"],
     
     /* Linting */
     "noUnusedLocals": true,
