--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,8 @@
     "noEmit": false,
     "outDir": "./dist",
     "rootDir": "./src",
+    "typeRoots": ["./node_modules/@types", "../node_modules/@types", "./src/types"],
+    "types": ["node", "express"],
     
     /* Linting */
     "noUnusedLocals": true,
@@ -50,7 +52,8 @@
   "exclude": [
     "node_modules",
     "dist",
-    "coverage"
+    "coverage",
+    "src/tests/**/*"
   ],
   "ts-node": {
     "esm": false,
