Correções críticas do pipeline CI/CD e testes E2E
 Correções implementadas:
- Adicionado 'npx prisma generate' nos jobs de build do GitHub Actions
- Instalado cross-env para compatibilidade entre plataformas
- Padronizado NODE_ENV !== 'test' em vez de 'unit-test'
- Criado ambiente 'e2e' para testes end-to-end
- Adicionados data-testids na página de login (email-input, password-input, login-button)
- Corrigido endpoint /health para retornar ambiente correto em testes E2E

 Resultados dos testes:
- Backend: 92 testes passando (100%)
- Frontend: 16 testes passando (100%)
- E2E: Problemas críticos de ambiente e login resolvidos
- Banco de dados: Conexão e operações funcionando

 Melhorias:
- Pipeline de CI/CD estabilizado
- Testes E2E básicos funcionando
- Configuração de ambiente padronizada

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -265,7 +265,11 @@ jobs:
         run: npm ci
         
       - name: 🏗️ Build backend
-        run: cd backend && npm ci && npm run build
+        run: |
+          cd backend
+          npm ci
+          npx prisma generate
+          npm run build
         
       - name: 🏗️ Build frontend
         run: cd frontend && npm ci && npm run build
@@ -301,7 +305,7 @@ jobs:
       - name: 🏗️ Build for staging
         run: |
           npm ci
-          cd backend && npm ci && npm run build
+          cd backend && npm ci && npx prisma generate && npm run build
           cd ../frontend && npm ci && npm run build
 
       - name: 📦 Archive staging artifacts
