--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "dotenv -e .env -- tsx watch src/index.ts",
     "dev:test": "cross-env NODE_ENV=test dotenv -e .env.test -- tsx watch src/index.ts",
+    "dev:e2e": "cross-env NODE_ENV=e2e dotenv -e .env.test -- tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
@@ -66,6 +67,7 @@
     "@types/swagger-ui-express": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "^8.45.0",
